# MyExercism

./: .gitignore  README.md
others/exercise/: c1.py
others/exercise/one/: readme.md
others/exercise/two/: c1.py  c2.py
others/exercise/two/notebook/.ipynb_checkpoints/: c2-checkpoint.ipynb
rust/CITool/: Cargo.toml
rust/CITool/src/: main.rs
rust/anagram/: Cargo.toml
rust/anagram/src/: lib.rs  main.rs
rust/anagram/tests/: anagram.rs
rust/clock/: README.md
rust/clock/src/: lib.rs
rust/forth/: Cargo.toml
rust/forth/src/: lib.rs
rust/forth/tests/: forth.rs
rust/forth_1/: README.md
rust/forth_1/src/: lib.rs  main.rs
rust/gigasecond/src/: lib.rs
rust/luhn/src/: lib.rs  main.rs
rust/minesweeper/: Cargo.toml
rust/minesweeper/src/: lib.rs  main.rs
rust/minesweeper/tests/: minesweeper.rs
rust/parallel-letter-frequency/: Cargo.toml
rust/parallel-letter-frequency/benches/: parallel-letter-frequency.rs
rust/parallel-letter-frequency/src/: lib.rs  main.rs
rust/parallel-letter-frequency/tests/: parallel-letter-frequency.rs
rust/poker/: HINTS.md  README.md
rust/poker/src/: lib.rs  main.rs
rust/reverse-string/src/: lib.rs
rust/space-age/: README.md
rust/space-age/src/: lib.rs
rust/sublist/src/: lib.rs  main.rs
