[package]
name = "CITool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4"
env_logger = "0.8"
serde = "1.0"
#serde_yaml = "0.9.34"
serde_derive = "1.0"
serde_json = "1.0"


